--- a/env.example
+++ b/env.example
@@ -1,2 +1,2 @@
-GITHUB_TOKEN=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
+GITHUB_TOKEN=
 GITHUB_USERNAME=timboyuen
