--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "homepage": "timboyuen.com",
   "version": "0.1.0",
   "scripts": {
+    "add-domain": "echo \"timboyuen.com\" > build/CNAME",
     "build": "react-scripts build",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b gh-pages -d build",
+    "deploy": "npm run add-domain && gh-pages -b gh-pages -d build",
     "eject": "react-scripts eject",
     "start": "react-scripts start",
     "test": "react-scripts test"
