removed the add domain in the deploy script

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "add-domain": "echo \"timboyuen.com\" > build/CNAME",
     "build": "react-scripts build",
     "predeploy": "npm run build",
-    "deploy": "npm run add-domain && gh-pages -b gh-pages -d build",
+    "deploy": "gh-pages -b gh-pages -d build",
     "eject": "react-scripts eject",
     "start": "react-scripts start",
     "test": "react-scripts test"
