--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "masterPortfolio",
-  "homepage": "timboyuen.com",
+  "homepage": ".",
   "version": "0.1.0",
   "scripts": {
     "add-domain": "echo \"timboyuen.com\" > build/CNAME",
