Putting the google analytics tag higher in the head portion

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "version": "0.1.0",
   "scripts": {
     "add-domain": "echo \"timboyuen.com\" > build/CNAME",
-    "build": "react-scripts build",
+    "build": "react-scripts build && npm run add-domain",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b gh-pages -d build",
+    "deploy": "npm run add-domain && gh-pages -b gh-pages -d build",
     "eject": "react-scripts eject",
     "start": "react-scripts start",
     "test": "react-scripts test"
